chore: add even more cakes